[project]
name = "task-tracker-mcp"
version = "0.1.0"
description = "Minimal MCP server for tracking tasks / todos."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
]

[project.scripts]
task-tracker-mcp = "task_tracker_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/task_tracker_mcp"]
